Fix/bugs/fe (#99)
* [Task][Integration] Display tenant list

* [Task][Integrate] Integrate display tenant list

* [Task][Integration] Display tenant list

* [Task][Integration] Display a tenant list

* [Task][Integrate] Integrate display tenant list

* [Task][Integration] Display tenant list

* [Task][Integration] Display a tenant list

* [Task][Integrate] Integrate display tenant list

* [Task][Integration] Display tenant list

* [Task][FE] Initial commit for chart

* [Task][FE] Create custom chart

* [Task][Integrate] Change password settings

* [Task][Integrate] Change password settings

* [Fixed][Yup validation] password

* [Task][FE] Display billables

* [Fix][Bugs] fix and refactor billing statement
